--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
