--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   "dependencies": {
     "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/web3.js": "^1.63.1",
+    "@tanstack/react-query": "^4.7.2",
     "framer-motion": "^7.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "yarn": "^1.22.19"
   }
 }
