--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1001",
+    "dev": "next dev -p 1002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@gokiprotocol/walletkit": "^1.7.3",
     "@nfteyez/sol-rayz": "^0.10.2",
+    "@react-spring/web": "^9.5.5",
+    "@saberhq/use-solana": "^1.14.9",
     "@solana/web3.js": "^1.63.1",
     "@tanstack/react-query": "^4.7.2",
-    "framer-motion": "^7.4.0",
+    "framer-motion": "^6.5.1",
+    "lodash.groupby": "^4.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/lodash.groupby": "^4.6.7",
     "@types/react": "18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
